Ensured selected version number doesn't wrap

--- a/themes/cfbs-theme/styles/less/form.less
+++ b/themes/cfbs-theme/styles/less/form.less
@@ -9,6 +9,7 @@
     display: flex;
     align-content: space-between;
     flex-wrap: nowrap;
+    white-space: nowrap;
     padding: .8rem 1.2rem;
     background: @white;
     border-radius: 4px;
